--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 				<!-- Contents -->
 				<div class="content-block">
 					<h1>LiRa</h1>
-					<h5>Jailbreak iOS 13.0 đến 13.5 (13.5.1 Beta)</h5>
+					<h5>Jailbreak iOS 13.0 đến 13.5 (13.5.1 Beta một số thiết bị)</h5>
 					<h5>bởi Hòa Huỳnh</h5>
 					<br>
 					<h6>LiRa được kết hợp giữa Odysey và Un0ver lại với nhau..đem đến một trải nghiệm mượt mà.
