--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 					<h1>LiRa</h1>
 					<h5>Jailbreak iOS 13.0 - 13.5 (13.5.1Beta)</h5>
 					<h5>bởi Hòa Huỳnh</h5>
+					<h5>Bản Cập Nhật cuối cùng đc phát hành</h5>
 					<br>
 					<h6>LiRa được kết hợp giữa Odysey và Un0ver lại với nhau..đem đến một trải nghiệm mượt mà.
 						<br><br>
