--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 					Cài đặt qua AltStore<span class="ml-1 d-none d-md-inline"></span></a></center>
                     <br>
                     <h5>Thông tin cập nhật:</h5>
-                    <h6>1.2b5:<br><br>+ Cập nhật Bootstrap mới.<br><br>+ Sửa lỗi không thể sign app trên 1.1.3.<br><br>+ Sửa lỗi tự động Reboot/Respring trên một số thiết bị.<br><br> </h6>
+                    <h6>1.2b5:<br><br>+ Cập nhật Bootstrap mới.<br><br>+ Sửa lỗi không thể sign app trên 1.1.3.<br><br>+ Sửa lỗi tự động Reboot/Respring trên một số thiết bị.<br><br>+ Sửa lỗi không mua app được trên Appstore.<br><br>+ Sửa lỗi Camera bị đen.</h6>
                     <h6>1.1.3: <br><br>+ Sửa lỗi bootloop Respring khi cài tweak.<br><br>+ Sửa lỗi tfp0 trên iOS 13.5.1 Beta1.<br><br>+ Sửa lỗi Khôi phục Rootfs.<br><br>+ Sửa lỗi không thể sign app.<br><br>+ Cập nhật nguồn trên Zebra.<br><br> </h6>
                     <h6>1.1: <br><br>+ Cập nhật trình cài đặt Zebra.<br><br>+ Cập nhật tiếng Việt.<br><br>+ Sữa lỗi bootloop bootstrap.</h6>
                     <h6>1.0: <br><br>+ phát hành.</h6>
