--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 				<!-- Contents -->
 				<div class="content-block">
 					<h1>LiRa</h1>
-					<h5>Jailbreak iOS 13.0 - 13.5 (13.5.1 Beta 1 )</h5>
+					<h5>Jailbreak iOS 12.0 ( Coming Soon ) - 13.5 (13.5.1 Beta 1 )</h5>
 					<h5>bởi Hòa Huỳnh</h5>
 				
 					
