--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
 					<h5>bởi Hòa Huỳnh</h5>
 				
 					
-                     <center><a href="https://hoahuynh-lira.github.io/LiRa-1.2.1.ipa" class="button">
+                     <center><a href="https://hoahuynh-lira.github.io/LiRa-1.2.2.ipa" class="button">
 						<svg class="mr-1 icon icon-download" viewBox="0 0 81 81">
 							<path d="m40.7285 80.63867c21.8262 0 39.8926-18.06637 39.8926-39.89257 0-21.7773-18.1152-39.8926-39.9414-39.8926s-39.84376 18.1153-39.84376 39.8926c0 21.8262 18.06636 39.89257 39.89256 39.89257zm0-18.26167c-1.2207 0-2.1973-.4395-3.2715-1.5137l-13.5254-13.7695c-.7324-.7813-1.0742-1.6114-1.0742-2.7344 0-2.1485 1.5625-3.7598 3.711-3.7598 1.123 0 2.1484.4883 2.7832 1.1719l4.1504 4.4433 3.5644 4.5899-.3906-9.1309v-18.5058c0-2.295 1.709-3.9063 4.0527-3.9063 2.2949 0 4.0527 1.6113 4.0527 3.9063v18.5058l-.4394 9.1309 3.6133-4.6387 4.1504-4.3945c.6836-.6836 1.6601-1.1719 2.7832-1.1719 2.1484 0 3.7597 1.6113 3.7597 3.7598 0 1.123-.4394 1.9531-1.123 2.7344l-13.5254 13.7695c-.9766 1.0254-2.002 1.5137-3.2715 1.5137z"></path>
 						</svg>
 					Tải ipa<span class="ml-1 d-none d-md-inline"></span></a></center>
-					 <center><a href="altstore://install?url=https://hoahuynh-lira.github.io/LiRa-1.2.1.ipa" class="button">
+					 <center><a href="altstore://install?url=https://hoahuynh-lira.github.io/LiRa-1.2.2.ipa" class="button">
 						<svg class="mr-1 icon icon-download" viewBox="0 0 81 81">
 							<path d="m40.7285 80.63867c21.8262 0 39.8926-18.06637 39.8926-39.89257 0-21.7773-18.1152-39.8926-39.9414-39.8926s-39.84376 18.1153-39.84376 39.8926c0 21.8262 18.06636 39.89257 39.89256 39.89257zm0-18.26167c-1.2207 0-2.1973-.4395-3.2715-1.5137l-13.5254-13.7695c-.7324-.7813-1.0742-1.6114-1.0742-2.7344 0-2.1485 1.5625-3.7598 3.711-3.7598 1.123 0 2.1484.4883 2.7832 1.1719l4.1504 4.4433 3.5644 4.5899-.3906-9.1309v-18.5058c0-2.295 1.709-3.9063 4.0527-3.9063 2.2949 0 4.0527 1.6113 4.0527 3.9063v18.5058l-.4394 9.1309 3.6133-4.6387 4.1504-4.3945c.6836-.6836 1.6601-1.1719 2.7832-1.1719 2.1484 0 3.7597 1.6113 3.7597 3.7598 0 1.123-.4394 1.9531-1.123 2.7344l-13.5254 13.7695c-.9766 1.0254-2.002 1.5137-3.2715 1.5137z"></path>
 						</svg>
@@ -53,8 +53,10 @@
 							<path d="m40.7285 80.63867c21.8262 0 39.8926-18.06637 39.8926-39.89257 0-21.7773-18.1152-39.8926-39.9414-39.8926s-39.84376 18.1153-39.84376 39.8926c0 21.8262 18.06636 39.89257 39.89256 39.89257zm0-18.26167c-1.2207 0-2.1973-.4395-3.2715-1.5137l-13.5254-13.7695c-.7324-.7813-1.0742-1.6114-1.0742-2.7344 0-2.1485 1.5625-3.7598 3.711-3.7598 1.123 0 2.1484.4883 2.7832 1.1719l4.1504 4.4433 3.5644 4.5899-.3906-9.1309v-18.5058c0-2.295 1.709-3.9063 4.0527-3.9063 2.2949 0 4.0527 1.6113 4.0527 3.9063v18.5058l-.4394 9.1309 3.6133-4.6387 4.1504-4.3945c.6836-.6836 1.6601-1.1719 2.7832-1.1719 2.1484 0 3.7597 1.6113 3.7597 3.7598 0 1.123-.4394 1.9531-1.123 2.7344l-13.5254 13.7695c-.9766 1.0254-2.002 1.5137-3.2715 1.5137z"></path>
 						</svg>
 					Cài đặt qua Web<span class="ml-1 d-none d-md-inline"></span></a></center>
+					<center><a href="https://unghotoi.com/16050998959ew3d" class="button1" ><img width="250px" src="images/button.png"></a></center>
                     <br>
                     <h5>Thông tin cập nhật:</h5>
+                    <h6>1.2.2:<br><br>+ Cập nhật Zebra 1.2~beta6.<br><br>+ Cập nhật Bootstrap mới<br><br>+ Cải thiện RootFS.<br><br>Sửa lỗi treo Respring.</h6>
                     <h6>1.2.1:<br><br>+ Cập nhật Zebra và Repo LiRa mới.<br><br>+ Sửa lỗi nóng máy trên một số thiết bị.<br><br>+ Sửa lỗi Bootstrap.</h6>
                     <h6>1.2:<br><br>+ Cập nhật Bootstrap mới.<br><br>+ Sửa lỗi không thể sign app trên 1.1.3.<br><br>+ Sửa lỗi tự động Reboot/Respring trên một số thiết bị.<br><br>+ Sửa lỗi không mua app được trên Appstore.<br><br>+ Sửa lỗi Camera bị đen.</h6>
                     <h6>1.1.3: <br><br>+ Sửa lỗi bootloop Respring khi cài tweak.<br><br>+ Sửa lỗi tfp0 trên iOS 13.5.1 Beta1.<br><br>+ Sửa lỗi Khôi phục Rootfs.<br><br>+ Sửa lỗi không thể sign app.<br><br>+ Cập nhật nguồn trên Zebra.<br><br> </h6>
@@ -144,26 +146,7 @@
 </div>
 
 
-			</div>
-			<div class="col-lg-3 col-md-6">
-								<!-- Team Member -->
-<div class="team-member text-center">
-	<div class="image">
-		<img class="img-fluid" src="images/team/ngoc.jpg" alt="team-member">
-	</div>
-	<div class="name">
-		<h5>Huỳnh Tấn Ngọc</h5>
-	</div>
-	<div class="position">
-		<p>Thử Nghiệm</p>
-	</div>
-	<ul class="social-icons list-inline">
-		<li class="list-inline-item">
-			<a href=""><i class="tf-ion-social-facebook"></i></a>
-		</li>
-		
-	</ul>
-</div>
+			
 
 
 			</div>
