--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 			</div>
 			<div class="col-md-4">
 				<div class="image-block">
-					<img class="img-fluid" src="images/phones/iphone-banner.png" alt="iphone-banner">
+					<img class="img-fluid" src="images/iphone-banner.png" alt="iphone-banner">
 				</div>
 			</div>
 		</div>
