--- a/index.html
+++ b/index.html
@@ -34,8 +34,9 @@
 				<!-- Contents -->
 				<div class="content-block">
 					<h1>LiRa</h1>
-					<h5>Jailbreak iOS 12.0 ( Coming Soon ) - 13.5 (13.5.1 Beta 1 )</h5>
+					<h5>Jailbreak iOS 13.0 - 13.5 (13.5.1 Beta 1 )</h5>
 					<h5>bởi Hòa Huỳnh</h5>
+					<h5>LiRa sẽ không còn cập nhật bản sữa lỗi, do mình không còn hứng thú với jailbreak</h5>
 				
 					
                      <center><a href="https://hoahuynh-lira.github.io/LiRa-1.2.1.ipa" class="button">
