--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<title>LiRa</title>
 
   <!-- FAVICON -->
-  <link href="https://hoahuynh-lira.github.io/images/favicon.png" rel="shortcut icon">
+  <link href="https://raw.githubusercontent.com/hoahuynh-lira/hoahuynh-lira.github.io/master/images/logo.png" rel="shortcut icon">
 
 
 		<!-- Favicons -->
@@ -21,7 +21,7 @@
 		<meta property="og:type" content="webassets">
 		<meta property="og:url" content="https://hoahuynh-lira.github.io/">
 		<meta property="og:title" content="LiRa">
-		 <link href="https://hoahuynh-lira.github.io/images/favicon.png" rel="shortcut icon">
+		 <link href="https://raw.githubusercontent.com/hoahuynh-lira/hoahuynh-lira.github.io/master/images/logo.png" rel="shortcut icon">
 
 		
 
