--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                 <h4 class="mb-1">
                     <a href="">Nguyễn Ngọc</a>
                 </h4>
-                <p class="h5">Thiết Kế Logo/p>
+                <p class="h5">Thiết Kế Logo</p>
             </div>
         </div>
         <div class="col-md-4 col-12 credits-item d-flex align-items-center">
