--- a/releases.html
+++ b/releases.html
@@ -41,8 +41,8 @@
 
     <div class="container text-center my-5">
         <h1 class="hero-text">
-           <a href=""> <img src="https://raw.githubusercontent.com/hoahuynh-lira/hoahuynh-lira.github.io/master/images/logo.png"></a>
-                    <a href="">LiRa</a>
+           <a href="https://hoahuynh-lira.github.io/"> <img src="https://raw.githubusercontent.com/hoahuynh-lira/hoahuynh-lira.github.io/master/images/logo.png"></a>
+                    <a href="https://hoahuynh-lira.github.io/">LiRa</a>
                 </h1>
                 <p class="mb-0">
                             For iOS 12.0(CS) - 13.5(13.5.1B1)<br>By <a href="https://www.facebook.com/hoahuynh.htbn/"> Hòa Huỳnh</a>
