--- a/2.html
+++ b/2.html
@@ -6,7 +6,7 @@
         <title>LiRa</title>
 
   <!-- FAVICON -->
-  <link href="https://raw.githubusercontent.com/hoahuynh-lira/hoahuynh-lira.github.io/master/images/logo.png" rel="shortcut icon">
+  <link href="https://raw.githubusercontent.com/hoahuynh-lira/hoahuynh-lira.github.io/master/img/%20Jellyfish1.png" rel="shortcut icon">
 
 
         <!-- Favicons -->
@@ -21,7 +21,7 @@
         <meta property="og:type" content="webassets">
         <meta property="og:url" content="https://hoahuynh-lira.github.io/">
         <meta property="og:title" content="LiRa">
-         <link href="https://raw.githubusercontent.com/hoahuynh-lira/hoahuynh-lira.github.io/master/images/logo.png" rel="shortcut icon">
+         <link href="https://raw.githubusercontent.com/hoahuynh-lira/hoahuynh-lira.github.io/master/img/%20Jellyfish1.png" rel="shortcut icon">
 
         
 
@@ -38,7 +38,7 @@
 
     <div class="container text-center my-5">
         <h1 class="hero-text">
-           <a href=""> <img src="https://raw.githubusercontent.com/hoahuynh-lira/hoahuynh-lira.github.io/master/images/logo.png"></a>
+           <a href=""> <img src="https://raw.githubusercontent.com/hoahuynh-lira/hoahuynh-lira.github.io/master/img/%20Jellyfish1.png"></a>
                     <a href="">LiRa</a>
                 </h1>
                 <p class="mb-0">
