--- a/2.html
+++ b/2.html
@@ -38,7 +38,7 @@
 
     <div class="container text-center my-5">
         <h1 class="hero-text">
-           <a href=""> <img with="100px" src="https://raw.githubusercontent.com/hoahuynh-lira/hoahuynh-lira.github.io/master/img/%20Jellyfish1.png"></a>
+           <a href=""> <img width="100px" src="https://raw.githubusercontent.com/hoahuynh-lira/hoahuynh-lira.github.io/master/img/%20Jellyfish1.png"></a>
                     <a href="">LiRa</a>
                 </h1>
                 <p class="mb-0">
